2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* src/rediff.c (show_modified_hunk): If changes have been made
	outside the original diff, error out (trac #1).

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* tests/rediff2/run-test: New test case.

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: Fixed typo (trac #7).

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (xtmpfile): New function.
	* src/interdiff.c (output_delta): Use it.
	(take_diff): Likewise.
	(interdiff): Likewise.
	* src/diff.c (do_convert): Likewise.
	* src/filterdiff.c (do_unified): Likewise.
	(do_context): Likewise.
	* src/rediff.c (added_hunk): Likewise.
	(show_modified_hunk): Likewise.
	(rediff): Likewise.
	* src/util.c (xopen_seekable): Likewise.
	(xopen_unzip): Likewise.

	The tmpfile() function is not specified to use the TMPDIR
	environment variable.  We wrap it to make sure that TMPDIR is
	honoured (trac #3).

2008-07-28  Tim Waugh  <twaugh@redhat.com>

	* src/interdiff.c (output_patch1_only): Clean up error messages.
	(output_delta): Likewise.
	Patch from Eli Carter.

2008-07-02  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.3.0 (stable).

2008-07-02  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (clean_comments): New global.
	(filterdiff): Use it in determining whether to show non-diff
	lines.
	(syntax_str): Updated.
	(main): New option --clean.

	* doc/patchutils.xml: Updated.

	* tests/clean1/run-test: New test case.
	* Makefile.am (TESTS): Run it.

2008-07-02  Tim Waugh  <twaugh@redhat.com>

	* Makefile.am: Add TESTS and XFAIL_TESTS to EXTRA_DIST,
	instead of listing each test twice.

2008-06-11  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (patlist_add_file): New function.
	* src/filterdiff.c (main): Use it, for new options -X and -I.
	(syntax_str): Updated.
	Original patch from Serj Kalichev.

	* doc/patchutils.xml: Updated.

	* tests/select2/run-test: Test -I (context format).
	* tests/select1/run-test: Test -I (unified format).