@@ -1,3 +1,9 @@
+2009-01-23  Tim Waugh  <twaugh@redhat.com>
+
+	* src/rediff.c (adjust_offsets_and_copy): Keep the trailing text
+	after @@ (trac #8).
+	(removed_hunk): Likewise.
+
 2009-01-21  Tim Waugh  <twaugh@redhat.com>
 
 	* src/rediff.c (show_modified_hunk): If changes have been made
